@@ -47,6 +47,7 @@ Change log next version
 * Fixed a bug when setting content type to JSON and using a byte array as body (issue 156).
 * Multi-headers and multi-cookie cookie parsing now uses ignore-case equals to identify the entity.
 * Upgraded to Hamcrest 1.2.1.
+* Fixed a bug with the cookie parsing which couldn't deal with cookie values including an equal character (issue 159).
 
 Change log 1.5 (2011-12-20)
 ---------------------------
